tests/fail/drop_memcase_and_get.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase_and_get.rs:43:10
   |
40 |     let mem_case = unsafe { <Wrapper<Vec<String>>>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
41 |
42 |     let s = mem_case.get(0);
   |             -------- borrow of `mem_case` occurs here
43 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
44 |     assert_eq!(s, "foo");
   |     -------------------- borrow later used here
